--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,11 +1,14 @@
 buildscript {
+    ext.kotlin_version = '1.6.10'
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
@@ -13,6 +16,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
