--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,14 +6,17 @@ authors:
 homepage: https://github.com/edufolly/flutter_bluetooth_serial/tree/master/example/
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
+  google_maps_flutter: ^2.1.7
+  location: ^4.4.0
   flutter:
     sdk: flutter
 
   scoped_model: ^2.0.0-nullsafety.0
   cupertino_icons: ^1.0.3
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
